--- a/emergency_stroke_pipeline.ipynb
+++ b/emergency_stroke_pipeline.ipynb
@@ -197,6 +197,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "87a4c700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/asjad99/mimiciii?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10.6M/10.6M [00:00<00:00, 42.4MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: /home/sraja/.cache/kagglehub/datasets/asjad99/mimiciii/versions/1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"asjad99/mimiciii\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2b50434c",
    "metadata": {},
