updating markdown cell

--- a/emergency_stroke_pipeline.ipynb
+++ b/emergency_stroke_pipeline.ipynb
@@ -5,16 +5,7 @@
    "id": "13cc547c",
    "metadata": {},
    "source": [
-    "# Emergency Stroke Response Pipeline Demo\n",
-    "\n",
-    "This Jupyter notebook demonstrates an end‑to‑end pipeline for processing an emergency call and patient data in the context of suspected stroke.  The pipeline includes:\n",
-    "\n",
-    "1. **Audio transcription (ASR)** – converting spoken words from a call recording into text using an automatic speech recognition model (e.g. OpenAI Whisper or Mozilla DeepSpeech).\n",
-    "2. **Clinical summarisation** – generating a concise summary of the call transcript and other clinical notes using a biomedical language model (e.g. BioBART, ClinicalT5).\n",
-    "3. **Stroke detection** – applying machine‑learning models to speech or vital signs to estimate the likelihood of a stroke.  For demonstration we include code stubs for dysarthria (slurred speech) detection and vitals‑based classification.\n",
-    "4. **Timeline generation** – combining timestamped events (call, vitals, interventions) into a chronological timeline.\n",
-    "\n",
-    "> **Note:** This notebook provides runnable code for each stage using open‑source libraries.  However, the heavy models (ASR and LLM summarisation) require installation of external packages and may need GPU acceleration to run efficiently.  You can uncomment the installation commands to set up the environment when running this notebook.  Sample data is provided or generated synthetically where appropriate; you may replace these with your own recordings, clinical notes and vitals.\n"
+    "# AI-Enhanced Emergency Response Pipeline\n"
    ]
   },
   {
