--- a/emergency_stroke_pipeline.ipynb
+++ b/emergency_stroke_pipeline.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "2e85f6cf",
    "metadata": {},
    "outputs": [
@@ -56,36 +56,21 @@
      "output_type": "stream",
      "text": [
       "Whisper transcript:\n",
-      " Brooke, 911, my husband's having a heart attack. Brooke, we're going to start CPR on him, okay? I'm\n",
-      "going to tell you what to do. Okay. Are you right next to him? Yeah. Put him flat on the floor on\n",
-      "his back. Okay. Expose his chest. Expose his chest. Kneel by his side. Okay. Okay. Okay. Put the\n",
-      "heel of your hand in the center of his chest right between the nipples. Okay. Push down firmly with\n",
-      "only the heels of your hand, two inches. Okay. And do it 30 times like you're pumping the chest. I'm\n",
-      "going to count. I want you to go this fast, as fast as I'm counting. Okay. One, two, three, four,\n",
-      "five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
-      "27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13,\n",
-      "14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. One, two, three, four, five,\n",
-      "six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,\n",
-      "29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15,\n",
-      "16, 19, 20, 21, 22. One, two, three, four, five, six, seven, eight, nine, 10, 11, 14, 15, 16, 19,\n",
-      "20, 21, 22, 25, 21, 22, 24, 26, 27, 29, 30. 17 18 19 20 22 23 24 25 26 27 28 29 30 I know this is\n",
-      "hard I want to take a deep breath and stop crying and start again okay 1 2 3 4 5 6 7 8 9 10 11 12 13\n",
-      "14 15 16 17 18 19 20 21 22 23 45 26 27 28 29 30 okay start again 5 6 7 8 9 10 11 12 13 14 15 16 17\n",
-      "18 19 20 21 22 23 24 25 27 26 26 27 28 19 20 19 20 21 22 23 24 25 27 28 19 21 22 23 24 25 27 27 28\n",
-      "28 19 20 21 22 23 24 25 27 28 19 20 21 22 23. 24 28 19 20 21 19 20 21 22 23. Hot see 24 26. Hot see\n",
-      "1 1 2 now 5 6 s teve 4. 6 7 six 7 8. 12 7 8. Hot see call.rays yes exactly woman 12 to go places 15\n",
-      "16astrofe but 8 7 six 6al белchencieveo that you 28, 29, 30. Is he breathing, moving, or coughing at\n",
-      "all? No, he's just strapping for air. Okay, just keep doing it. Go two inches deep. Let's start\n",
-      "again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
-      "27, 28, 29, 30. Are they inside? Yes, they're inside. Okay, keep going until they take over, okay?\n",
-      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic taking over? Yes.\n"
+      " Brooke, 911, my husband's having a heart attack. Brooke, we're going to start CPR on him, okay? I'm going to tell you what to do. Okay. Are you right next to him? Yeah. Put him flat on the floor on his back. Okay. Expose his chest. Expose his chest. Kneel by his side. Okay. Okay. Okay. Put the heel\n",
+      "of your hand in the center of his chest right between the nipples. Okay. Push down firmly with only the heels of your hand, two inches. Okay. And do it 30 times like you're pumping the chest. I'm going to count. I want you to go this fast, as fast as I'm counting. Okay. One, two, three, four, five,\n",
+      "six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. One, two, three, four, five, six, seven,\n",
+      "eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22. One, two, three, four, five, six, seven, eight, nine, 10, 11, 14, 15, 16, 19, 20, 21, 22,\n",
+      "25, 21, 22, 24, 26, 27, 29, 30. 17 18 19 20 22 23 24 25 26 27 28 29 30 I know this is hard I want to take a deep breath and stop crying and start again okay 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 45 26 27 28 29 30 okay start again 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22\n",
+      "23 24 25 27 26 26 27 28 19 20 19 20 21 22 23 24 25 27 28 19 21 22 23 24 25 27 27 28 28 19 20 21 22 23 24 25 27 28 19 20 21 22 23. 24 28 19 20 21 19 20 21 22 23. Hot see 24 26. Hot see 1 1 2 now 5 6 s teve 4. 6 7 six 7 8. 12 7 8. Hot see call.rays yes exactly woman 12 to go places 15 16astrofe but 8\n",
+      "7 six 6al белchencieveo that you 28, 29, 30. Is he breathing, moving, or coughing at all? No, he's just strapping for air. Okay, just keep doing it. Go two inches deep. Let's start again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Are\n",
+      "they inside? Yes, they're inside. Okay, keep going until they take over, okay? 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic taking over? Yes.\n"
      ]
     }
    ],
    "source": [
     "transcript = result['text']\n",
     "print('Whisper transcript:')\n",
-    "print(textwrap.fill(transcript, width=100))"
+    "print(textwrap.fill(transcript, width=300))"
    ]
   },
   {
@@ -129,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "c463791c",
    "metadata": {},
    "outputs": [
@@ -138,17 +123,14 @@
      "output_type": "stream",
      "text": [
       "Summary:\n",
-      "Brooke, 911, my husband's having a heart attack. Brooke's going to start CPR on him, okay? I'm going\n",
-      "to tell you what to do. I want you to go fast, as fast as you're counting. Okay. Are you right next\n",
-      "to him? Yeah. Put him flat on the floor on his back. Expose his chest. Kneel by his side. Put the\n",
-      "heel of your hand in the center of his chest right between the nipples. Push down firmly. Do it 30\n",
-      "times. The paramedic is taking over.\n"
+      "Brooke, 911, my husband's having a heart attack. Brooke's going to start CPR on him, okay? I'm going to tell you what to do. I want you to go fast, as fast as you're counting. Okay. Are you right next to him? Yeah. Put him flat on the floor on his back. Expose his chest. Kneel by his side. Put the\n",
+      "heel of your hand in the center of his chest right between the nipples. Push down firmly. Do it 30 times. The paramedic is taking over.\n"
      ]
     }
    ],
    "source": [
     "print('Summary:')\n",
-    "print(textwrap.fill(summary[0]['summary_text'], width=100))"
+    "print(textwrap.fill(summary[0]['summary_text'], width=300))"
    ]
   },
   {
