--- a/emergency_stroke_pipeline.ipynb
+++ b/emergency_stroke_pipeline.ipynb
@@ -35,19 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "565026f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "audio_path = 'call2.mp3'\n",
     "whisper_model = whisper.load_model('large', device=\"cuda\")\n",
-    "result = whisper_model.transcribe(audio_path)\n"
+    "result = whisper_model.transcribe(audio_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "2e85f6cf",
    "metadata": {},
    "outputs": [
@@ -58,12 +58,10 @@
       "Whisper transcript:\n",
       " Brooke, 911, my husband's having a heart attack. Brooke, we're going to start CPR on him, okay? I'm going to tell you what to do. Okay. Are you right next to him? Yeah. Put him flat on the floor on his back. Okay. Expose his chest. Expose his chest. Kneel by his side. Okay. Okay. Okay. Put the heel\n",
       "of your hand in the center of his chest right between the nipples. Okay. Push down firmly with only the heels of your hand, two inches. Okay. And do it 30 times like you're pumping the chest. I'm going to count. I want you to go this fast, as fast as I'm counting. Okay. One, two, three, four, five,\n",
-      "six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. One, two, three, four, five, six, seven,\n",
-      "eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22. One, two, three, four, five, six, seven, eight, nine, 10, 11, 14, 15, 16, 19, 20, 21, 22,\n",
-      "25, 21, 22, 24, 26, 27, 29, 30. 17 18 19 20 22 23 24 25 26 27 28 29 30 I know this is hard I want to take a deep breath and stop crying and start again okay 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 45 26 27 28 29 30 okay start again 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22\n",
-      "23 24 25 27 26 26 27 28 19 20 19 20 21 22 23 24 25 27 28 19 21 22 23 24 25 27 27 28 28 19 20 21 22 23 24 25 27 28 19 20 21 22 23. 24 28 19 20 21 19 20 21 22 23. Hot see 24 26. Hot see 1 1 2 now 5 6 s teve 4. 6 7 six 7 8. 12 7 8. Hot see call.rays yes exactly woman 12 to go places 15 16astrofe but 8\n",
-      "7 six 6al белchencieveo that you 28, 29, 30. Is he breathing, moving, or coughing at all? No, he's just strapping for air. Okay, just keep doing it. Go two inches deep. Let's start again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Are\n",
-      "they inside? Yes, they're inside. Okay, keep going until they take over, okay? 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic taking over? Yes.\n"
+      "six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Five, six, seven, eight, nine, serve the\n",
+      "five, six, seven, eight, nine, 10, 11, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 17 18 19 20 22 23 24 25 26 27 28 29 30 I know this is hard I want to take a deep breath and stop crying and start again okay 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 20 21\n",
+      "22 23 24 25 26 27 28 29 30 okay start again 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16 18 19 20 21 22 23 24 25 27 24 25 26 27 28 19 20 21 22 23 24 25 26 27 28 19 20 28, 29, 30. Is he breathing, moving, or coughing at all? No, he's just strapping for air. Okay, just keep doing it. Go two inches deep. Let's\n",
+      "start again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Are they inside? Yes, they're inside. Okay, keep going until they take over, okay? 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic taking over? Yes.\n"
      ]
     }
    ],
@@ -80,14 +78,12 @@
    "source": [
     "## Clinical Summarisation\n",
     "\n",
-    "Once we have the raw transcript of the call, we summarise it into a concise clinical description using a biomedical language model. \n",
-    "- **BioBART** (`GanjinZero/biobart-large`) – a BART‑based model fine‑tuned on radiology reports and other biomedical corpora.\n",
-    "\n"
+    "Once we have the raw transcript of the call, we summarise it into a concise clinical description using a biomedical language model.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "0a4504bb",
    "metadata": {},
    "outputs": [
@@ -96,8 +92,10 @@
      "output_type": "stream",
      "text": [
       "Device set to use cuda:0\n",
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (688 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Both `max_new_tokens` (=256) and `max_length`(=300) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (535 > 512). Running this sequence through the model will result in indexing errors\n",
+      "Both `max_new_tokens` (=256) and `max_length`(=500) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      "/home/sraja/miniconda3/envs/pytorch/lib/python3.12/site-packages/transformers/generation/utils.py:1641: UserWarning: Unfeasible length constraints: `min_length` (300) is larger than the maximum possible length (257). Generation will stop at the defined maximum length. You should decrease the minimum length and/or increase the maximum length.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -109,12 +107,12 @@
     "summariser = pipeline('summarization', model=model, tokenizer=tokenizer)\n",
     "\n",
     "sample_transcript = (transcript)\n",
-    "summary = summariser(sample_transcript, max_length=300, min_length=100, do_sample=False)"
+    "summary = summariser(sample_transcript, max_length=500, min_length=300, do_sample=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "c463791c",
    "metadata": {},
    "outputs": [
@@ -123,8 +121,9 @@
      "output_type": "stream",
      "text": [
       "Summary:\n",
-      "Brooke, 911, my husband's having a heart attack. Brooke's going to start CPR on him, okay? I'm going to tell you what to do. I want you to go fast, as fast as you're counting. Okay. Are you right next to him? Yeah. Put him flat on the floor on his back. Expose his chest. Kneel by his side. Put the\n",
-      "heel of your hand in the center of his chest right between the nipples. Push down firmly. Do it 30 times. The paramedic is taking over.\n"
+      "Brooke's husband is having a heart attack. She's going to start CPR on him. Brooke, the paramedic, is taking over the CPR. They're inside. YES, they're taking over, okay? - Brooke. - I'm going to call 911, if Brooke is right next to him, and if he's breathing, he should be able to do it again. I'll\n",
+      "call 911. I don't know if she'll take over, but she's taking care of her husband. Is she taking over? Is Brooke going to take care of him? I'd like her to take over. I want Brooke to take a deep breath and stop crying, and I want her to stop crying. I know this is hard, but I want you to start\n",
+      "again, okay - 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16 18 19 20 21 22 23 24 25 27 26 27 28 29 30 - My husband's heart attack is coming back. I need you to help me. I have a call coming in, and Brooke will call 911\n"
      ]
     }
    ],
