--- a/emergency_stroke_pipeline.ipynb
+++ b/emergency_stroke_pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f9a9cdee",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import whisper\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, pipeline\n",
     "# from deepspeech import Model as DeepSpeechModel\n",
-    "import textwrap\n"
+    "import textwrap"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "565026f2",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "2e85f6cf",
    "metadata": {},
    "outputs": [
@@ -56,19 +56,36 @@
      "output_type": "stream",
      "text": [
       "Whisper transcript:\n",
-      " Brooke, 911, my husband's having a heart attack. Brooke, we're going to start CPR on him, okay? I'm going to tell you what to do. Okay. Are you right next to him? Yeah. Put him flat on the floor on his back. Okay. Expose his chest. Expose his chest. Kneel by his side. Okay. Okay. Okay. Put the heel\n",
-      "of your hand in the center of his chest right between the nipples. Okay. Push down firmly with only the heels of your hand, two inches. Okay. And do it 30 times like you're pumping the chest. I'm going to count. I want you to go this fast, as fast as I'm counting. Okay. One, two, three, four, five,\n",
-      "six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Five, six, seven, eight, nine, serve the\n",
-      "five, six, seven, eight, nine, 10, 11, 24, 25, 26, 27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 17 18 19 20 22 23 24 25 26 27 28 29 30 I know this is hard I want to take a deep breath and stop crying and start again okay 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 20 21\n",
-      "22 23 24 25 26 27 28 29 30 okay start again 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16 18 19 20 21 22 23 24 25 27 24 25 26 27 28 19 20 21 22 23 24 25 26 27 28 19 20 28, 29, 30. Is he breathing, moving, or coughing at all? No, he's just strapping for air. Okay, just keep doing it. Go two inches deep. Let's\n",
-      "start again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Are they inside? Yes, they're inside. Okay, keep going until they take over, okay? 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic taking over? Yes.\n"
+      " Brooke, 911, my husband's having a heart attack. Brooke, we're going to start CPR on him, okay? I'm\n",
+      "going to tell you what to do. Okay. Are you right next to him? Yeah. Put him flat on the floor on\n",
+      "his back. Okay. Expose his chest. Expose his chest. Kneel by his side. Okay. Okay. Okay. Put the\n",
+      "heel of your hand in the center of his chest right between the nipples. Okay. Push down firmly with\n",
+      "only the heels of your hand, two inches. Okay. And do it 30 times like you're pumping the chest. I'm\n",
+      "going to count. I want you to go this fast, as fast as I'm counting. Okay. One, two, three, four,\n",
+      "five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+      "27, 28, 29, 30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13,\n",
+      "14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Again. One, two, and three.\n",
+      "Four, five, six, seven, eight, nine, 10, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Start again. One,\n",
+      "two, three, four, five, six, seven, eight, nine, 10, 11, 12, 23, 24, 25, 26, 27, 28, 29, 30. Start\n",
+      "again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 23, 24, 25, 26, 27, 28, 29,\n",
+      "30. Start again. One, two, three, four, five, six, seven, eight, nine, 10, 11, 12, 13, 14, 15, 16,\n",
+      "19, 20, 22, 23, 45, 65, 67, 80. Start again. 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. I know this is hard. I want you to take a\n",
+      "deep breath. Stop crying and start again, okay? 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,\n",
+      "16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Okay, start again. 1, 2, 3, 4, 5, 6, 7,\n",
+      "8, 9, 10, 11, 12, 13, 14. Come on. 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30.\n",
+      "Is he breathing, moving, or coughing at all? No, he's just strapping for air. Okay, just keep doing\n",
+      "it. Go two inches deep. Let's start again. 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+      "18. 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30. Are they inside? Yes, hurry. Okay, keep going\n",
+      "until they take over, okay? Hurry. 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12. Okay, is the paramedic\n",
+      "taking over? Yes.\n"
      ]
     }
    ],
    "source": [
     "transcript = result['text']\n",
     "print('Whisper transcript:')\n",
-    "print(textwrap.fill(transcript, width=300))"
+    "print(textwrap.fill(transcript, width=100))"
    ]
   },
   {
@@ -83,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "0a4504bb",
    "metadata": {},
    "outputs": [
@@ -92,10 +109,7 @@
      "output_type": "stream",
      "text": [
       "Device set to use cuda:0\n",
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (535 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Both `max_new_tokens` (=256) and `max_length`(=500) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
-      "/home/sraja/miniconda3/envs/pytorch/lib/python3.12/site-packages/transformers/generation/utils.py:1641: UserWarning: Unfeasible length constraints: `min_length` (300) is larger than the maximum possible length (257). Generation will stop at the defined maximum length. You should decrease the minimum length and/or increase the maximum length.\n",
-      "  warnings.warn(\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (643 > 512). Running this sequence through the model will result in indexing errors\n"
      ]
     }
    ],
@@ -107,12 +121,12 @@
     "summariser = pipeline('summarization', model=model, tokenizer=tokenizer)\n",
     "\n",
     "sample_transcript = (transcript)\n",
-    "summary = summariser(sample_transcript, max_length=500, min_length=300, do_sample=False)"
+    "summary = summariser(sample_transcript, min_length=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "c463791c",
    "metadata": {},
    "outputs": [
@@ -121,15 +135,16 @@
      "output_type": "stream",
      "text": [
       "Summary:\n",
-      "Brooke's husband is having a heart attack. She's going to start CPR on him. Brooke, the paramedic, is taking over the CPR. They're inside. YES, they're taking over, okay? - Brooke. - I'm going to call 911, if Brooke is right next to him, and if he's breathing, he should be able to do it again. I'll\n",
-      "call 911. I don't know if she'll take over, but she's taking care of her husband. Is she taking over? Is Brooke going to take care of him? I'd like her to take over. I want Brooke to take a deep breath and stop crying, and I want her to stop crying. I know this is hard, but I want you to start\n",
-      "again, okay - 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16 18 19 20 21 22 23 24 25 27 26 27 28 29 30 - My husband's heart attack is coming back. I need you to help me. I have a call coming in, and Brooke will call 911\n"
+      "Brooke's husband is having a heart attack. She's going to start CPR on him. She wants the paramedic\n",
+      "to take over. They're going to hurry, and they'll be in a few minutes. They will be taken to a\n",
+      "hospital. They are going to have a paramedical to take care of him. - Brooke, 911, my husband's\n",
+      "heart attack is coming back. Brooke is going to call 911, but she's not going to be able to help.\n"
      ]
     }
    ],
    "source": [
     "print('Summary:')\n",
-    "print(textwrap.fill(summary[0]['summary_text'], width=300))"
+    "print(textwrap.fill(summary[0]['summary_text'], width=100))"
    ]
   },
   {
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "a6e7384d",
    "metadata": {},
    "outputs": [
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "dcc794f8",
    "metadata": {},
    "outputs": [
@@ -190,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "47b798a6",
    "metadata": {},
    "outputs": [
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "d4a9db78",
    "metadata": {},
    "outputs": [
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "6de1d17a",
    "metadata": {},
    "outputs": [
@@ -321,7 +336,6 @@
       "2025-08-13 12:50:00 - Ambulance arrives\n",
       "2025-08-13 12:50:30 - BP 180/95, HR 100, SPO2 93\n",
       "2025-08-13 12:52:00 - BP 185/100, HR 98, SPO2 90\n",
-      "2025-08-13 12:55:00 - FAST exam positive\n",
       "2025-08-13 13:10:00 - Arrived at ER\n"
      ]
     }
@@ -347,7 +361,6 @@
     "\n",
     "# Example interventions\n",
     "intervention_events = pd.DataFrame([\n",
-    "    {'time': '2025-08-13T12:55:00', 'event': 'FAST exam positive'},\n",
     "    {'time': '2025-08-13T13:10:00', 'event': 'Arrived at ER'},\n",
     "] )\n",
     "\n",
